--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,11 @@ version: 1.0.0
 environment:
   sdk: ^3.4.3
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
-  http:
+  http: ^0.13.5
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+
+
